# GameDevTemplates

./: CMakeLists.txt  Doxyfile.in  README.rst
cmake/: FindSphinx.cmake
docs/: animation.rst  application.rst  audio.rst  blueprints.rst  concepts.rst  conf.py.in  context.rst  control.rst  debug.rst  drawing.rst  index.rst  placeholder.rst  renderers.rst  scenes.rst  shaders.rst  text.rst
examples/: CMakeLists.txt  basic_rendering.cc  empty_app.cc  literst.awk  physics_instancing.cc  skeletal_animation.cc  text_rendering.cc
res/examples/: crate2.smd  moon.smd  rooster.smd
res/fonts/: sdf.fnt
res/shaders/: forward.frag  forward.vert  forward_rigged.frag  forward_rigged.vert  fxaa.frag  geom.vert  geom_rigged.frag  geom_rigged.vert  light.frag  light.vert  text.frag  text.vert
src/: .clang-format  gdt.h
src/backends/blueprints/: audio.hh  graphics.hh  physics.hh  platform.hh
src/backends/bullet/: bullet.hh
src/backends/glfw/: glfw.cc  glfw.hh  glfw_opengl.hh  glfw_vulkan.hh  imgui_impl_glfw.cpp
src/backends/openal/: openal.cc  openal.hh
src/backends/opengl/: opengl.cc  opengl.hh  opengl_buffer.hh  opengl_shaders.hh  opengl_surface.hh  opengl_text.hh
src/backends/sdl/: imgui_impl_sdl.cpp  sdl.cc  sdl.hh
src/core/: animation.cc  animation.hh  application.hh  asset.hh  camera.cc  camera.hh  context.hh  drawable.hh  drivers.hh  easing.cc  extensions.hh  font.hh  instances.hh  light.hh  loader.cc  loader.hh  math.cc  math.hh  mesh.hh  physics.hh  renderer.hh  scene.hh  screen.hh  shaders.hh  text.hh  timeline.cc  timeline.hh  traits.hh
src/imgui/: imgui_gdt.cc  imgui_gdt.hh
src/utils/: checks.hh  lodepng.cc  logger.cc  logger.hh
